syntax = "proto3";

package obd.v1;
import "obd/v1/center/entity.proto";



message CentersListRequest {
    float lat = 1;
    float long = 2;
}
    
message CentersListResponse {
    repeated CenterListRow centers = 1;
}